2015-02-10  Julien Bect  <julien.bect@supelec.fr>

	stk_feval.m: Fix backward compatibility issue

	* arrays/generic/stk_feval.m: Fix backward compatibility
	issue. Old-style STK structures, where the data is contained in a
	field named 'a', were not dealt with properly. Add unit test.

2015-02-09  Julien Bect  <julien.bect@supelec.fr>

	stk_hrect.m: Provide default constructor

	* arrays/@stk_hrect/stk_hrect.m: Provide default constructor

2015-02-04  Julien Bect  <julien.bect@supelec.fr>

	Overload uplus, uminus for stk_dataframe objects.

	* arrays/@stk_dataframe/uminus.m: Overload uminus.
	* arrays/@stk_dataframe/uplus.m: Overload uplus.
	* arrays/@stk_factorialdesign/uminus.m: Overload uminus.

	stk_feval.m: Accept multivariate outputs (closes #20)

	* arrays/generic/stk_feval.m: Accept functions with multivariate
	outputs (i.e., outputs with several columns). Improve the
	construction of the output dataframe (column names). Add unit
	tests.

	stk_feval.m: Fix a bug related to column names

	* arrays/generic/stk_feval.m: Fix a bug related to column names.

2015-02-03  Julien Bect  <julien.bect@supelec.fr>

	@stk_dataframe/apply, min, max: Return more than one output argument

	* arrays/@stk_dataframe/apply.m: Return more than one output argument
	* arrays/@stk_dataframe/max.m: Return more than one output argument
	* arrays/@stk_dataframe/min.m: Return more than one output argument

	stk_param_relik.m: Improve the computation of G = W' * K * W

	* paramestim/stk_param_relik.m: Compute G = W' * K * W in such a
	way that the result is always (?) symmetric.

2015-01-28  Julien Bect  <julien.bect@supelec.fr>

	stk_predict.m: Compute lambda_mu and RS only when necessary

	* core/stk_predict.m: Compute lambda_mu and RS only when
	necessary, depending on the number of output arguments. Add unit
	tests.

	stk_param_init.m: Handle the heteroscedastic case

	* paramestim/stk_param_init.m: Handle the heteroscedastic case